parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkComment
    TkPoint

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> TkProgram SECUENCIACION
Rule 2     BLOQUE -> TkBegin VACIO TkEnd TkSemicolon
Rule 3     BLOQUE -> TkBegin SECUENCIACION TkEnd VACIO
Rule 4     BLOQUE -> TkBegin TkDeclare DECL_VAR SECUENCIACION TkEnd TkSemicolon
Rule 5     BLOQUE -> TkBegin TkDeclare DECL_VAR SECUENCIACION TkEnd VACIO
Rule 6     INSTRUCCION -> POST
Rule 7     INSTRUCCION -> ASIGNACION TkSemicolon
Rule 8     INSTRUCCION -> ASIGNACION VACIO
Rule 9     INSTRUCCION -> ENTRADA TkSemicolon
Rule 10    INSTRUCCION -> ENTRADA VACIO
Rule 11    INSTRUCCION -> SALIDA TkSemicolon
Rule 12    INSTRUCCION -> SALIDA VACIO
Rule 13    INSTRUCCION -> CONVERTIR
Rule 14    INSTRUCCION -> CONDICIONAL_IF
Rule 15    INSTRUCCION -> CONDICIONAL_CASE
Rule 16    INSTRUCCION -> ITERACION_FOR
Rule 17    INSTRUCCION -> ITERACION_WHILE
Rule 18    INSTRUCCION -> BLOQUE
Rule 19    INSTRUCCION -> VACIO
Rule 20    SECUENCIACION -> INSTRUCCION
Rule 21    SECUENCIACION -> INSTRUCCION SECUENCIACION
Rule 22    IDENTIFICADOR -> TkId
Rule 23    ASIGNACION -> EXPRESION TkAsig EXPRESION
Rule 24    ENTRADA -> TkRead IDENTIFICADOR
Rule 25    SALIDA -> TkPrint LISTA_VAR
Rule 26    SALIDA -> TkPrintln LISTA_VAR
Rule 27    SALIDA -> TkPrint CADENA
Rule 28    SALIDA -> TkPrintln CADENA
Rule 29    CADENA -> TkString
Rule 30    CONDICIONAL_IF -> TkIf EXP_BOOL TkThen SECUENCIACION TkElse SECUENCIACION
Rule 31    CONDICIONAL_IF -> TkIf EXP_BOOL TkThen SECUENCIACION
Rule 32    CONDICIONAL_CASE -> TkCase EXPRESION TkOf LISTA_CASE TkEnd
Rule 33    CONDICIONAL_CASE -> TkCase EXPRESION TkOf LISTA_CASE TkEnd TkSemicolon
Rule 34    LISTA_CASE -> EXPRESION TkArrow SECUENCIACION
Rule 35    LISTA_CASE -> EXPRESION TkArrow SECUENCIACION LISTA_CASE
Rule 36    ITERACION_FOR -> TkFor IDENTIFICADOR TkIn EXPRESION TkDo SECUENCIACION
Rule 37    ITERACION_WHILE -> TkWhile EXP_BOOL TkDo SECUENCIACION
Rule 38    DECL_VAR -> LISTA_VAR TkAs LISTA_TIPO TkSemicolon DECL_VAR
Rule 39    DECL_VAR -> LISTA_VAR TkAs LISTA_TIPO
Rule 40    LISTA_VAR -> IDENTIFICADOR
Rule 41    LISTA_VAR -> IDENTIFICADOR TkComma LISTA_VAR
Rule 42    LISTA_TIPO -> DATO
Rule 43    LISTA_TIPO -> DATO TkComma LISTA_TIPO
Rule 44    DATO -> TkInt
Rule 45    DATO -> TkBool
Rule 46    DATO -> TkInter
Rule 47    EXPRESION -> TkNum
Rule 48    EXPRESION -> IDENTIFICADOR
Rule 49    EXPRESION -> EXP_ENTEROS
Rule 50    EXPRESION -> EXP_INTERVALOS
Rule 51    EXPRESION -> EXP_BOOL
Rule 52    EXPRESION -> TkOpenPar EXPRESION TkClosePar
Rule 53    EXP_ENTEROS -> EXPRESION TkMod EXPRESION
Rule 54    EXP_ENTEROS -> EXPRESION TkMult EXPRESION
Rule 55    EXP_ENTEROS -> EXPRESION TkDiv EXPRESION
Rule 56    EXP_ENTEROS -> EXPRESION TkPlus EXPRESION
Rule 57    EXP_ENTEROS -> EXPRESION TkMinus EXPRESION
Rule 58    EXP_INTERVALOS -> EXPRESION TkSoForth EXPRESION
Rule 59    EXP_INTERVALOS -> EXPRESION TkCap EXPRESION
Rule 60    EXP_BOOL -> TkTrue
Rule 61    EXP_BOOL -> TkFalse
Rule 62    EXP_BOOL -> TkNot EXP_BOOL
Rule 63    EXP_BOOL -> EXPRESION TkAnd EXPRESION
Rule 64    EXP_BOOL -> EXPRESION TkOr EXPRESION
Rule 65    EXP_BOOL -> EXPRESION TkIn EXPRESION
Rule 66    EXP_BOOL -> EXPRESION TkEqual EXPRESION
Rule 67    EXP_BOOL -> EXPRESION TkNEqual EXPRESION
Rule 68    EXP_BOOL -> EXPRESION TkGreater EXPRESION
Rule 69    EXP_BOOL -> EXPRESION TkGeq EXPRESION
Rule 70    EXP_BOOL -> EXPRESION TkLess EXPRESION
Rule 71    EXP_BOOL -> EXPRESION TkLeq EXPRESION
Rule 72    CONVERTIR -> TkItoi TkOpenPar IDENTIFICADOR TkClosePar
Rule 73    CONVERTIR -> TkLen TkOpenPar IDENTIFICADOR TkClosePar
Rule 74    CONVERTIR -> TkMax TkOpenPar IDENTIFICADOR TkClosePar
Rule 75    CONVERTIR -> TkMin TkOpenPar IDENTIFICADOR TkClosePar
Rule 76    POST -> TkOpenBra TkPost TkTwoPoints EXP_CUANTIFICADOR TkCloseBra
Rule 77    EXP_CUANTIFICADOR -> TkOpenPar TkForall IDENTIFICADOR TkPipe IDENTIFICADOR TkIn IDENTIFICADOR TkTwoPoints EXP_CUANTIFICADOR TkClosePar
Rule 78    EXP_CUANTIFICADOR -> TkOpenPar TkForall IDENTIFICADOR TkPipe IDENTIFICADOR TkIn IDENTIFICADOR TkTwoPoints EXP_BOOL TkClosePar
Rule 79    EXP_CUANTIFICADOR -> TkOpenPar TkExists IDENTIFICADOR TkPipe IDENTIFICADOR TkIn IDENTIFICADOR TkTwoPoints EXP_CUANTIFICADOR TkClosePar
Rule 80    EXP_CUANTIFICADOR -> TkOpenPar TkExists IDENTIFICADOR TkPipe IDENTIFICADOR TkIn IDENTIFICADOR TkTwoPoints EXP_BOOL TkClosePar
Rule 81    VACIO -> <empty>

Terminals, with rules where they appear

TkAnd                : 63
TkArrow              : 34 35
TkAs                 : 38 39
TkAsig               : 23
TkBegin              : 2 3 4 5
TkBool               : 45
TkCap                : 59
TkCase               : 32 33
TkCloseBra           : 76
TkClosePar           : 52 72 73 74 75 77 78 79 80
TkComma              : 41 43
TkComment            : 
TkDeclare            : 4 5
TkDiv                : 55
TkDo                 : 36 37
TkElse               : 30
TkEnd                : 2 3 4 5 32 33
TkEqual              : 66
TkExists             : 79 80
TkFalse              : 61
TkFor                : 36
TkForall             : 77 78
TkGeq                : 69
TkGreater            : 68
TkId                 : 22
TkIf                 : 30 31
TkIn                 : 36 65 77 78 79 80
TkInt                : 44
TkInter              : 46
TkItoi               : 72
TkLen                : 73
TkLeq                : 71
TkLess               : 70
TkMax                : 74
TkMin                : 75
TkMinus              : 57
TkMod                : 53
TkMult               : 54
TkNEqual             : 67
TkNot                : 62
TkNum                : 47
TkOf                 : 32 33
TkOpenBra            : 76
TkOpenPar            : 52 72 73 74 75 77 78 79 80
TkOr                 : 64
TkPipe               : 77 78 79 80
TkPlus               : 56
TkPoint              : 
TkPost               : 76
TkPrint              : 25 27
TkPrintln            : 26 28
TkProgram            : 1
TkRead               : 24
TkSemicolon          : 2 4 7 9 11 33 38
TkSoForth            : 58
TkString             : 29
TkThen               : 30 31
TkTrue               : 60
TkTwoPoints          : 76 77 78 79 80
TkWhile              : 37
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 7 8
BLOQUE               : 18
CADENA               : 27 28
CONDICIONAL_CASE     : 15
CONDICIONAL_IF       : 14
CONVERTIR            : 13
DATO                 : 42 43
DECL_VAR             : 4 5 38
ENTRADA              : 9 10
EXPRESION            : 23 23 32 33 34 35 36 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71
EXP_BOOL             : 30 31 37 51 62 78 80
EXP_CUANTIFICADOR    : 76 77 79
EXP_ENTEROS          : 49
EXP_INTERVALOS       : 50
IDENTIFICADOR        : 24 36 40 41 48 72 73 74 75 77 77 77 78 78 78 79 79 79 80 80 80
INSTRUCCION          : 20 21
ITERACION_FOR        : 16
ITERACION_WHILE      : 17
LISTA_CASE           : 32 33 35
LISTA_TIPO           : 38 39 43
LISTA_VAR            : 25 26 38 39 41
POST                 : 6
PROGRAMA             : 0
SALIDA               : 11 12
SECUENCIACION        : 1 3 4 5 21 30 30 31 34 35 36 37
VACIO                : 2 3 5 8 10 12 19

Parsing method: SLR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . TkProgram SECUENCIACION

    TkProgram       shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> TkProgram . SECUENCIACION
    (20) SECUENCIACION -> . INSTRUCCION
    (21) SECUENCIACION -> . INSTRUCCION SECUENCIACION
    (6) INSTRUCCION -> . POST
    (7) INSTRUCCION -> . ASIGNACION TkSemicolon
    (8) INSTRUCCION -> . ASIGNACION VACIO
    (9) INSTRUCCION -> . ENTRADA TkSemicolon
    (10) INSTRUCCION -> . ENTRADA VACIO
    (11) INSTRUCCION -> . SALIDA TkSemicolon
    (12) INSTRUCCION -> . SALIDA VACIO
    (13) INSTRUCCION -> . CONVERTIR
    (14) INSTRUCCION -> . CONDICIONAL_IF
    (15) INSTRUCCION -> . CONDICIONAL_CASE
    (16) INSTRUCCION -> . ITERACION_FOR
    (17) INSTRUCCION -> . ITERACION_WHILE
    (18) INSTRUCCION -> . BLOQUE
    (19) INSTRUCCION -> . VACIO
    (76) POST -> . TkOpenBra TkPost TkTwoPoints EXP_CUANTIFICADOR TkCloseBra
    (23) ASIGNACION -> . EXPRESION TkAsig EXPRESION
    (24) ENTRADA -> . TkRead IDENTIFICADOR
    (25) SALIDA -> . TkPrint LISTA_VAR
    (26) SALIDA -> . TkPrintln LISTA_VAR
    (27) SALIDA -> . TkPrint CADENA
    (28) SALIDA -> . TkPrintln CADENA
    (72) CONVERTIR -> . TkItoi TkOpenPar IDENTIFICADOR TkClosePar
    (73) CONVERTIR -> . TkLen TkOpenPar IDENTIFICADOR TkClosePar
    (74) CONVERTIR -> . TkMax TkOpenPar IDENTIFICADOR TkClosePar
    (75) CONVERTIR -> . TkMin TkOpenPar IDENTIFICADOR TkClosePar
    (30) CONDICIONAL_IF -> . TkIf EXP_BOOL TkThen SECUENCIACION TkElse SECUENCIACION
    (31) CONDICIONAL_IF -> . TkIf EXP_BOOL TkThen SECUENCIACION
    (32) CONDICIONAL_CASE -> . TkCase EXPRESION TkOf LISTA_CASE TkEnd
    (33) CONDICIONAL_CASE -> . TkCase EXPRESION TkOf LISTA_CASE TkEnd TkSemicolon
    (36) ITERACION_FOR -> . TkFor IDENTIFICADOR TkIn EXPRESION TkDo SECUENCIACION
    (37) ITERACION_WHILE -> . TkWhile EXP_BOOL TkDo SECUENCIACION
    (2) BLOQUE -> . TkBegin VACIO TkEnd TkSemicolon
    (3) BLOQUE -> . TkBegin SECUENCIACION TkEnd VACIO
    (4) BLOQUE -> . TkBegin TkDeclare DECL_VAR SECUENCIACION TkEnd TkSemicolon
    (5) BLOQUE -> . TkBegin TkDeclare DECL_VAR SECUENCIACION TkEnd VACIO
    (81) VACIO -> .
    (47) EXPRESION -> . TkNum
    (48) EXPRESION -> . IDENTIFICADOR
    (49) EXPRESION -> . EXP_ENTEROS
    (50) EXPRESION -> . EXP_INTERVALOS
    (51) EXPRESION -> . EXP_BOOL
    (52) EXPRESION -> . TkOpenPar EXPRESION TkClosePar
    (22) IDENTIFICADOR -> . TkId
    (53) EXP_ENTEROS -> . EXPRESION TkMod EXPRESION
    (54) EXP_ENTEROS -> . EXPRESION TkMult EXPRESION
    (55) EXP_ENTEROS -> . EXPRESION TkDiv EXPRESION
    (56) EXP_ENTEROS -> . EXPRESION TkPlus EXPRESION
    (57) EXP_ENTEROS -> . EXPRESION TkMinus EXPRESION
    (58) EXP_INTERVALOS -> . EXPRESION TkSoForth EXPRESION
    (59) EXP_INTERVALOS -> . EXPRESION TkCap EXPRESION
    (60) EXP_BOOL -> . TkTrue
    (61) EXP_BOOL -> . TkFalse
    (62) EXP_BOOL -> . TkNot EXP_BOOL
    (63) EXP_BOOL -> . EXPRESION TkAnd EXPRESION
    (64) EXP_BOOL -> . EXPRESION TkOr EXPRESION
    (65) EXP_BOOL -> . EXPRESION TkIn EXPRESION
    (66) EXP_BOOL -> . EXPRESION TkEqual EXPRESION
    (67) EXP_BOOL -> . EXPRESION TkNEqual EXPRESION
    (68) EXP_BOOL -> . EXPRESION TkGreater EXPRESION
    (69) EXP_BOOL -> . EXPRESION TkGeq EXPRESION
    (70) EXP_BOOL -> . EXPRESION TkLess EXPRESION
    (71) EXP_BOOL -> . EXPRESION TkLeq EXPRESION

  ! shift/reduce conflict for TkBegin resolved as shift
  ! shift/reduce conflict for TkOpenBra resolved as shift
  ! shift/reduce conflict for TkRead resolved as shift
  ! shift/reduce conflict for TkPrint resolved as shift
  ! shift/reduce conflict for TkPrintln resolved as shift
  ! shift/reduce conflict for TkItoi resolved as shift
  ! shift/reduce conflict for TkLen resolved as shift
  ! shift/reduce conflict for TkMax resolved as shift
  ! shift/reduce conflict for TkMin resolved as shift
  ! shift/reduce conflict for TkIf resolved as shift
  ! shift/reduce conflict for TkCase resolved as shift
  ! shift/reduce conflict for TkFor resolved as shift
  ! shift/reduce conflict for TkWhile resolved as shift
  ! shift/reduce conflict for TkNum resolved as shift
  ! shift/reduce conflict for TkOpenPar resolved as shift
  ! shift/reduce conflict for TkId resolved as shift
  ! shift/reduce conflict for TkTrue resolved as shift
  ! shift/reduce conflict for TkFalse resolved as shift
  ! shift/reduce conflict for TkNot resolved as shift
    TkOpenBra       shift and go to state 16
    TkRead          shift and go to state 18
    TkPrint         shift and go to state 20
    TkPrintln       shift and go to state 21
    TkItoi          shift and go to state 22
    TkLen           shift and go to state 24
    TkMax           shift and go to state 25
    TkMin           shift and go to state 26
    TkIf            shift and go to state 27
    TkCase          shift and go to state 29
    TkFor           shift and go to state 30
    TkWhile         shift and go to state 31
    TkBegin         shift and go to state 32
    TkEnd           reduce using rule 81 (VACIO -> .)
    $end            reduce using rule 81 (VACIO -> .)
    TkElse          reduce using rule 81 (VACIO -> .)
    TkNum           shift and go to state 33
    TkOpenPar       shift and go to state 23
    TkId            shift and go to state 36
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkNot           shift and go to state 39

  ! TkBegin         [ reduce using rule 81 (VACIO -> .) ]
  ! TkOpenBra       [ reduce using rule 81 (VACIO -> .) ]
  ! TkRead          [ reduce using rule 81 (VACIO -> .) ]
  ! TkPrint         [ reduce using rule 81 (VACIO -> .) ]
  ! TkPrintln       [ reduce using rule 81 (VACIO -> .) ]
  ! TkItoi          [ reduce using rule 81 (VACIO -> .) ]
  ! TkLen           [ reduce using rule 81 (VACIO -> .) ]
  ! TkMax           [ reduce using rule 81 (VACIO -> .) ]
  ! TkMin           [ reduce using rule 81 (VACIO -> .) ]
  ! TkIf            [ reduce using rule 81 (VACIO -> .) ]
  ! TkCase          [ reduce using rule 81 (VACIO -> .) ]
  ! TkFor           [ reduce using rule 81 (VACIO -> .) ]
  ! TkWhile         [ reduce using rule 81 (VACIO -> .) ]
  ! TkNum           [ reduce using rule 81 (VACIO -> .) ]
  ! TkId            [ reduce using rule 81 (VACIO -> .) ]
  ! TkOpenPar       [ reduce using rule 81 (VACIO -> .) ]
  ! TkTrue          [ reduce using rule 81 (VACIO -> .) ]
  ! TkFalse         [ reduce using rule 81 (VACIO -> .) ]
  ! TkNot           [ reduce using rule 81 (VACIO -> .) ]

    SECUENCIACION                  shift and go to state 3
    INSTRUCCION                    shift and go to state 4
    POST                           shift and go to state 5
    ASIGNACION                     shift and go to state 6
    VACIO                          shift and go to state 7
    ENTRADA                        shift and go to state 8
    SALIDA                         shift and go to state 9
    CONVERTIR                      shift and go to state 10
    CONDICIONAL_IF                 shift and go to state 11
    CONDICIONAL_CASE               shift and go to state 12
    ITERACION_FOR                  shift and go to state 13
    ITERACION_WHILE                shift and go to state 14
    BLOQUE                         shift and go to state 15
    EXPRESION                      shift and go to state 17
    IDENTIFICADOR                  shift and go to state 19
    EXP_BOOL                       shift and go to state 28
    EXP_ENTEROS                    shift and go to state 34
    EXP_INTERVALOS                 shift and go to state 35

state 3

    (1) PROGRAMA -> TkProgram SECUENCIACION .

    $end            reduce using rule 1 (PROGRAMA -> TkProgram SECUENCIACION .)


state 4

    (20) SECUENCIACION -> INSTRUCCION .
    (21) SECUENCIACION -> INSTRUCCION . SECUENCIACION
    (20) SECUENCIACION -> . INSTRUCCION
    (21) SECUENCIACION -> . INSTRUCCION SECUENCIACION
    (6) INSTRUCCION -> . POST
    (7) INSTRUCCION -> . ASIGNACION TkSemicolon
    (8) INSTRUCCION -> . ASIGNACION VACIO
    (9) INSTRUCCION -> . ENTRADA TkSemicolon
    (10) INSTRUCCION -> . ENTRADA VACIO
    (11) INSTRUCCION -> . SALIDA TkSemicolon
    (12) INSTRUCCION -> . SALIDA VACIO
    (13) INSTRUCCION -> . CONVERTIR
    (14) INSTRUCCION -> . CONDICIONAL_IF
    (15) INSTRUCCION -> . CONDICIONAL_CASE
    (16) INSTRUCCION -> . ITERACION_FOR
    (17) INSTRUCCION -> . ITERACION_WHILE
    (18) INSTRUCCION -> . BLOQUE
    (19) INSTRUCCION -> . VACIO
    (76) POST -> . TkOpenBra TkPost TkTwoPoints EXP_CUANTIFICADOR TkCloseBra
    (23) ASIGNACION -> . EXPRESION TkAsig EXPRESION
    (24) ENTRADA -> . TkRead IDENTIFICADOR
    (25) SALIDA -> . TkPrint LISTA_VAR
    (26) SALIDA -> . TkPrintln LISTA_VAR
    (27) SALIDA -> . TkPrint CADENA
    (28) SALIDA -> . TkPrintln CADENA
    (72) CONVERTIR -> . TkItoi TkOpenPar IDENTIFICADOR TkClosePar
    (73) CONVERTIR -> . TkLen TkOpenPar IDENTIFICADOR TkClosePar
    (74) CONVERTIR -> . TkMax TkOpenPar IDENTIFICADOR TkClosePar
    (75) CONVERTIR -> . TkMin TkOpenPar IDENTIFICADOR TkClosePar
    (30) CONDICIONAL_IF -> . TkIf EXP_BOOL TkThen SECUENCIACION TkElse SECUENCIACION
    (31) CONDICIONAL_IF -> . TkIf EXP_BOOL TkThen SECUENCIACION
    (32) CONDICIONAL_CASE -> . TkCase EXPRESION TkOf LISTA_CASE TkEnd
    (33) CONDICIONAL_CASE -> . TkCase EXPRESION TkOf LISTA_CASE TkEnd TkSemicolon
    (36) ITERACION_FOR -> . TkFor IDENTIFICADOR TkIn EXPRESION TkDo SECUENCIACION
    (37) ITERACION_WHILE -> . TkWhile EXP_BOOL TkDo SECUENCIACION
    (2) BLOQUE -> . TkBegin VACIO TkEnd TkSemicolon
    (3) BLOQUE -> . TkBegin SECUENCIACION TkEnd VACIO
    (4) BLOQUE -> . TkBegin TkDeclare DECL_VAR SECUENCIACION TkEnd TkSemicolon
    (5) BLOQUE -> . TkBegin TkDeclare DECL_VAR SECUENCIACION TkEnd VACIO
    (81) VACIO -> .
    (47) EXPRESION -> . TkNum
    (48) EXPRESION -> . IDENTIFICADOR
    (49) EXPRESION -> . EXP_ENTEROS
    (50) EXPRESION -> . EXP_INTERVALOS
    (51) EXPRESION -> . EXP_BOOL
    (52) EXPRESION -> . TkOpenPar EXPRESION TkClosePar
    (22) IDENTIFICADOR -> . TkId
    (53) EXP_ENTEROS -> . EXPRESION TkMod EXPRESION
    (54) EXP_ENTEROS -> . EXPRESION TkMult EXPRESION
    (55) EXP_ENTEROS -> . EXPRESION TkDiv EXPRESION
    (56) EXP_ENTEROS -> . EXPRESION TkPlus EXPRESION
    (57) EXP_ENTEROS -> . EXPRESION TkMinus EXPRESION
    (58) EXP_INTERVALOS -> . EXPRESION TkSoForth EXPRESION
    (59) EXP_INTERVALOS -> . EXPRESION TkCap EXPRESION
    (60) EXP_BOOL -> . TkTrue
    (61) EXP_BOOL -> . TkFalse
    (62) EXP_BOOL -> . TkNot EXP_BOOL
    (63) EXP_BOOL -> . EXPRESION TkAnd EXPRESION
    (64) EXP_BOOL -> . EXPRESION TkOr EXPRESION
    (65) EXP_BOOL -> . EXPRESION TkIn EXPRESION
    (66) EXP_BOOL -> . EXPRESION TkEqual EXPRESION
    (67) EXP_BOOL -> . EXPRESION TkNEqual EXPRESION
    (68) EXP_BOOL -> . EXPRESION TkGreater EXPRESION
    (69) EXP_BOOL -> . EXPRESION TkGeq EXPRESION
    (70) EXP_BOOL -> . EXPRESION TkLess EXPRESION
    (71) EXP_BOOL -> . EXPRESION TkLeq EXPRESION

  ! shift/reduce conflict for TkOpenBra resolved as shift
  ! shift/reduce conflict for TkRead resolved as shift
  ! shift/reduce conflict for TkPrint resolved as shift
  ! shift/reduce conflict for TkPrintln resolved as shift
  ! shift/reduce conflict for TkItoi resolved as shift
  ! shift/reduce conflict for TkLen resolved as shift
  ! shift/reduce conflict for TkMax resolved as shift
  ! shift/reduce conflict for TkMin resolved as shift
  ! shift/reduce conflict for TkIf resolved as shift
  ! shift/reduce conflict for TkCase resolved as shift
  ! shift/reduce conflict for TkFor resolved as shift
  ! shift/reduce conflict for TkWhile resolved as shift
  ! shift/reduce conflict for TkBegin resolved as shift
  ! reduce/reduce conflict for TkEnd resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! reduce/reduce conflict for $end resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! shift/reduce conflict for TkBegin resolved as shift
  ! shift/reduce conflict for TkOpenBra resolved as shift
  ! shift/reduce conflict for TkRead resolved as shift
  ! shift/reduce conflict for TkPrint resolved as shift
  ! shift/reduce conflict for TkPrintln resolved as shift
  ! shift/reduce conflict for TkItoi resolved as shift
  ! shift/reduce conflict for TkLen resolved as shift
  ! shift/reduce conflict for TkMax resolved as shift
  ! shift/reduce conflict for TkMin resolved as shift
  ! shift/reduce conflict for TkIf resolved as shift
  ! shift/reduce conflict for TkCase resolved as shift
  ! shift/reduce conflict for TkFor resolved as shift
  ! shift/reduce conflict for TkWhile resolved as shift
  ! reduce/reduce conflict for TkNum resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! reduce/reduce conflict for TkId resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! reduce/reduce conflict for TkOpenPar resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! reduce/reduce conflict for TkTrue resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! reduce/reduce conflict for TkFalse resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! reduce/reduce conflict for TkNot resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! reduce/reduce conflict for TkElse resolved using rule 20 (SECUENCIACION -> INSTRUCCION .)
  ! shift/reduce conflict for TkNum resolved as shift
  ! shift/reduce conflict for TkOpenPar resolved as shift
  ! shift/reduce conflict for TkId resolved as shift
  ! shift/reduce conflict for TkTrue resolved as shift
  ! shift/reduce conflict for TkFalse resolved as shift
  ! shift/reduce conflict for TkNot resolved as shift
    $end            reduce using rule 20 (SECUENCIACION -> INSTRUCCION .)
    TkEnd           reduce using rule 20 (SECUENCIACION -> INSTRUCCION .)
    TkElse          reduce using rule 20 (SECUENCIACION -> INSTRUCCION .)
    TkOpenBra       shift and go to state 16
    TkRead          shift and go to state 18
    TkPrint         shift and go to state 20
    TkPrintln       shift and go to state 21
    TkItoi          shift and go to state 22
    TkLen           shift and go to state 24
    TkMax           shift and go to state 25
    TkMin           shift and go to state 26
    TkIf            shift and go to state 27
    TkCase          shift and go to state 29
    TkFor           shift and go to state 30
    TkWhile         shift and go to state 31
    TkBegin         shift and go to state 32
    TkNum           shift and go to state 33
    TkOpenPar       shift and go to state 23
    TkId            shift and go to state 36
    TkTrue          shift and go to state 37
    TkFalse         shift and go to state 38
    TkNot           shift and go to state 39

  ! TkNum           [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkId            [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkOpenPar       [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkTrue          [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkFalse         [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkNot           [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkBegin         [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkOpenBra       [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkRead          [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkPrint         [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkPrintln       [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkItoi          [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkLen           [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkMax           [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkMin           [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkIf            [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkCase          [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkFor           [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkWhile         [ reduce using rule 20 (SECUENCIACION -> INSTRUCCION .) ]
  ! TkEnd           [ reduce using rule 81 (VACIO -> .) ]
  ! $end            [ reduce using rule 81 (VACIO -> .) ]
  ! TkBegin         [ reduce using rule 81 (VACIO -> .) ]
  ! TkOpenBra       [ reduce using rule 81 (VACIO -> .) ]
  ! TkRead          [ reduce using rule 81 (VACIO -> .) ]
  ! TkPrint         [ reduce using rule 81 (VACIO -> .) ]
  ! TkPrintln       [ reduce using rule 81 (VACIO -> .) ]
  ! TkItoi          [ reduce using rule 81 (VACIO -> .) ]
  ! TkLen           [ reduce using rule 81 (VACIO -> .) ]
  ! TkMax           [ reduce using rule 81 (VACIO -> .) ]
  ! TkMin           [ reduce using rule 81 (VACIO -> .) ]
  ! TkIf            [ reduce using rule 81 (VACIO -> .) ]
  ! TkCase          [ reduce using rule 81 (VACIO -> .) ]
  ! TkFor           [ reduce using rule 81 (VACIO -> .) ]
  ! TkWhile         [ reduce using rule 81 (VACIO -> .) ]
  ! TkNum           [ reduce using rule 81 (VACIO -> .) ]
  ! TkId            [ reduce using rule 81 (VACIO -> .) ]
  ! TkOpenPar       [ reduce using rule 81 (VACIO -> .) ]
  ! TkTrue          [ reduce using rule 81 (VACIO -> .) ]
  ! TkFalse         [ reduce using rule 81 (VACIO -> .) ]
  ! TkNot           [ reduce using rule 81 (VACIO -> .) ]
  ! TkElse          [ reduce using rule 81 (VACIO -> .) ]

    INSTRUCCION                    shift and go to state 4
    SECUENCIACION                  shift and go to state 40
    POST                           shift and go to state 5
    ASIGNACION                     shift and go to state 6
    VACIO                          shift and go to state 7
    ENTRADA                        shift and go to state 8
    SALIDA                         shift and go to state 9
    CONVERTIR                      shift and go to state 10
    CONDICIONAL_IF                 shift and go to state 11
    CONDICIONAL_CASE               shift and go to state 12
    ITERACION_FOR                  shift and go to state 13
    ITERACION_WHILE                shift and go to state 14
    BLOQUE                         shift and go to state 15
    EXPRESION                      shift and go to state 17
    IDENTIFICADOR                  shift and go to state 19
    EXP_BOOL                       shift and go to state 28
    EXP_ENTEROS                    shift and go to state 34
    EXP_INTERVALOS                 shift and go to state 35

state 5

    (6) INSTRUCCION -> POST .

    $end            reduce using rule 6 (INSTRUCCION -> POST .)
    TkEnd           reduce using rule 6 (INSTRUCCION -> POST .)
    TkBegin         reduce using rule 6 (INSTRUCCION -> POST .)
    TkOpenBra       reduce using rule 6 (INSTRUCCION -> POST .)
    TkRead          reduce using rule 6 (INSTRUCCION -> POST .)
    TkPrint         reduce using rule 6 (INSTRUCCION -> POST .)
    TkPrintln       reduce using rule 6 (INSTRUCCION -> POST .)
    TkItoi          reduce using rule 6 (INSTRUCCION -> POST .)
    TkLen           reduce using rule 6 (INSTRUCCION -> POST .)
    TkMax           reduce using rule 6 (INSTRUCCION -> POST .)
    TkMin           reduce using rule 6 (INSTRUCCION -> POST .)
    TkIf            reduce using rule 6 (INSTRUCCION -> POST .)
    TkCase          reduce using rule 6 (INSTRUCCION -> POST .)
    TkFor           reduce using rule 6 (INSTRUCCION -> POST .)
    TkWhile         reduce using rule 6 (INSTRUCCION -> POST .)
    TkNum           reduce using rule 6 (INSTRUCCION -> POST .)
    TkId            reduce using rule 6 (INSTRUCCION -> POST .)
    TkOpenPar       reduce using rule 6 (INSTRUCCION -> POST .)
    TkTrue          reduce using rule 6 (INSTRUCCION -> POST .)
    TkFalse         reduce using rule 6 (INSTRUCCION -> POST .)
    TkNot           reduce using rule 6 (INSTRUCCION -> POST .)
    TkElse          reduce using rule 6 (INSTRUCCION -> POST .)


state 6

    (7) INSTRUCCION -> ASIGNACION . TkSemicolon
    (8) INSTRUCCION -> ASIGNACION . VACIO
    (81) VACIO -> .
